--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,8 +1,5 @@
 name: CI
-on:
-  pull_request:
-    branches:
-      - main
+on: [ pull_request]
 
 permissions:
   contents: read
@@ -16,7 +13,6 @@ jobs:
           uses: actions/checkout@v3
         - name: Install python dependencies
           run: pip install -r requirements.txt
-          
         - name: Run Unit tests
           run: python ./tests/test.py
 
