--- a/k8s/configmap.yaml
+++ b/k8s/configmap.yaml
@@ -6,6 +6,6 @@ data:
     ENVIRONMENT: DEV
     HOST: localhost
     PORT: "8000"
-    REDIS_HOST: "redis-14216.c52.us-east-1-4.ec2.cloud.redislabs.com"
-    REDIS_PORT: "14216"
+    REDIS_HOST: "redis"
+    REDIS_PORT: "6379"
     REDIS_DB: "0"
