--- a/.github/workflows/kubelint.yml
+++ b/.github/workflows/kubelint.yml
@@ -2,7 +2,7 @@ name: CI
 on:
   pull_request:
     paths:
-      - '.k8s/**'
+      - 'k8s/**'
 jobs:
   kubelint:
     name: Kube-lint
@@ -12,4 +12,4 @@ jobs:
       - name: Scan repo with kube-linter
         uses: stackrox/kube-linter-action@v1.0.5
         with:
-          directory: .k8s
+          directory: k8s
