--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -33,3 +33,7 @@ spec:
         envFrom:
             - configMapRef:
                     name: env
+        securityContext:  
+          readOnlyRootFilesystem: true  
+          runAsUser: 1000  
+          runAsNonRoot: true 
