--- a/k8s/redis-deployment.yaml
+++ b/k8s/redis-deployment.yaml
@@ -17,3 +17,14 @@ spec:
         image: redis
         ports:
         - containerPort: 6379
+        securityContext:  
+          readOnlyRootFilesystem: true
+          runAsUser: 1000
+          runAsNonRoot: true
+        resources:
+          requests:
+            memory: "256Mi"
+            cpu: "250m"
+          limits:
+            memory: "512Mi"
+            cpu: "500m"
