--- a/k8s/redis-deployment.yaml
+++ b/k8s/redis-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: redis
-        image: redis
+        image: redis:7.4.1
         ports:
         - containerPort: 6379
         securityContext:  
